--- a/Selenium IDE tests/Feedback.html
+++ b/Selenium IDE tests/Feedback.html
@@ -17,6 +17,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>css=i.glyphicon.glyphicon-comment</td>
 	<td></td>
@@ -86,7 +91,6 @@
 	<td>link=CRÉER UNE OPERATION</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
