--- a/Selenium IDE tests/Login-Logout-Login.html
+++ b/Selenium IDE tests/Login-Logout-Login.html
@@ -57,7 +57,17 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>waitForElementPresent</td>
+	<td>link=Déconnexion</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
 	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
