Add Last common test for Porsche

--- a/Selenium IDE tests/Calendrier. Add disponoble person.html
+++ b/Selenium IDE tests/Calendrier. Add disponoble person.html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Calendrier. Add disponoble person</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>calendrier</td>
 	<td></td>
@@ -124,6 +154,11 @@
 <tr>
 	<td>click</td>
 	<td>//div[@id='page-calendrierdesévènementsporsche']/section/div/div[2]/a/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
 </tbody></table>
