--- a/Selenium IDE tests/Logout.html
+++ b/Selenium IDE tests/Logout.html
@@ -13,6 +13,11 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
 	<td>/accueil</td>
 	<td></td>
 </tr>
@@ -21,7 +26,6 @@
 	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
