--- a/Selenium IDE tests/Open Calendrier page. Verify Events by Jour, Semaine, Mois, Annee. Top filters verify events.html
+++ b/Selenium IDE tests/Open Calendrier page. Verify Events by Jour, Semaine, Mois, Annee. Top filters verify events.html
@@ -39,7 +39,7 @@
 <tr>
 	<td>assertText</td>
 	<td>css=h2</td>
-	<td>avril 2018</td>
+	<td>mai 2018</td>
 </tr>
 <tr>
 	<td>assertText</td>
@@ -188,16 +188,6 @@
 </tr>
 <tr>
 	<td>assertText</td>
-	<td>//div[@id='calendar']/div[2]/div/table/tbody/tr[2]/td[2]/div[3]/div/div/div[2]/table/tbody/tr[5]/td[6]/a/div/span</td>
-	<td>Trackday POF</td>
-</tr>
-<tr>
-	<td>assertText</td>
-	<td>//div[@id='calendar']/div[2]/div/table/tbody/tr[2]/td[2]/div[3]/div/div[2]/div[2]/table/tbody/tr[6]/td[7]/a/div/span</td>
-	<td>Corsica Porsche</td>
-</tr>
-<tr>
-	<td>assertText</td>
 	<td>//div[@id='calendar']/div[2]/div/table/tbody/tr[2]/td[4]/div[3]/div/div/div[2]/table/tbody/tr[9]/td/a/div/span</td>
 	<td>Spring meeting</td>
 </tr>
@@ -242,21 +232,20 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>//div[@id='calendar']/div[2]/div/table/tbody/tr[3]/td[6]/div[3]/div/div[2]/div[2]/table/tbody/tr[44]/td/a/div/span</td>
-	<td>Chantilly</td>
+	<td>click</td>
+	<td>id=filters_0</td>
+	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>//div[@id='calendar']/div[2]/div/table/tbody/tr[3]/td[6]/div[3]/div/div[5]/div[2]/table/tbody/tr[43]/td/a/div/span</td>
-	<td>Meeting 911 Classic</td>
+	<td>click</td>
+	<td>//div[@id='calendar-wrapper']/div/div[2]/div/div/div/div/div/label</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
 	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
