--- a/Selenium IDE tests/Open Feedback page.Verify page. Retour-Enregistrer, Exporter en PDF.html
+++ b/Selenium IDE tests/Open Feedback page.Verify page. Retour-Enregistrer, Exporter en PDF.html
@@ -12,6 +12,11 @@
 <tr><td rowspan="1" colspan="3">Login-Logout-Login</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/login</td>
 	<td></td>
@@ -167,9 +172,14 @@
 	<td>Test 8</td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>id=test_yes_no</td>
-	<td>Test 6</td>
+	<td>click</td>
+	<td>id=use_speech_0</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=test_yes_no_0</td>
+	<td></td>
 </tr>
 <tr>
 	<td>type</td>
