--- a/Selenium IDE tests/Porsche Logo.html
+++ b/Selenium IDE tests/Porsche Logo.html
@@ -13,6 +13,31 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
 	<td>/depenses</td>
 	<td></td>
 </tr>
@@ -21,7 +46,11 @@
 	<td>css=img</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
