--- a/Selenium IDE tests/Depenses marketing.html
+++ b/Selenium IDE tests/Depenses marketing.html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Depenses marketing</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/depenses</td>
 	<td></td>
@@ -77,11 +107,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>link=25</td>
-	<td></td>
-</tr>
-<tr>
 	<td>select</td>
 	<td>css=div.col-md-3 &gt; div.form-group &gt; #type_spending_id</td>
 	<td>label=E-mailing</td>
@@ -129,6 +154,11 @@
 <tr>
 	<td>click</td>
 	<td>//button[@type='submit']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
 </tbody></table>
