--- a/Selenium IDE tests/Open Accueil page. Try to add link to banner (do not finish operation).html
+++ b/Selenium IDE tests/Open Accueil page. Try to add link to banner (do not finish operation).html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Open Accueil page. Try to add link to banner (do not finish operation)</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/accueil</td>
 	<td></td>
@@ -100,6 +130,11 @@
 	<td>waitForText</td>
 	<td>css=h3.box-title</td>
 	<td>ACTIVITÉ CENTRE PORSCHE</td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
