--- a/Selenium IDE tests/Open Mes activities marketing. Create Operation.html
+++ b/Selenium IDE tests/Open Mes activities marketing. Create Operation.html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Open Mes activities marketing. Create Operation</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/activites?centre=32</td>
 	<td></td>
@@ -144,6 +174,11 @@
 <tr>
 	<td>clickAndWait</td>
 	<td>css=button.btn.btn-black</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
 </tbody></table>
