--- a/Selenium IDE tests/Open Mes activities marketing. Verify Topp filters.html
+++ b/Selenium IDE tests/Open Mes activities marketing. Verify Topp filters.html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Open Mes activities marketing. Verify Topp filters</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/planmarketing</td>
 	<td></td>
@@ -104,6 +134,11 @@
 <tr>
 	<td>click</td>
 	<td>link=26</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
 </tbody></table>
