--- a/Selenium IDE tests/Open PM. Verify page. Valid-Not valide PM.html
+++ b/Selenium IDE tests/Open PM. Verify page. Valid-Not valide PM.html
@@ -12,6 +12,36 @@
 <tr><td rowspan="1" colspan="3">Open PM. Verify page. Valid-Not valide PM</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>open</td>
+	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=username</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/actualites</td>
 	<td></td>
@@ -144,6 +174,11 @@
 <tr>
 	<td>clickAt</td>
 	<td>css=button.btn.btn-default</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAt</td>
+	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
 </tbody></table>
