Test automation updated 03/05/2018

--- a/Selenium IDE tests/Logout-Login as BM user.html
+++ b/Selenium IDE tests/Logout-Login as BM user.html
@@ -66,6 +66,11 @@
 	<td>link=Déconnexion</td>
 	<td></td>
 </tr>
+<tr>
+	<td>waitForElementPresent</td>
+	<td>//form[@id='form-login']/fieldset/label[2]</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
