--- a/Selenium IDE tests/Open Autres Reporting. Verify page Table of own Autres Reporting , Top filters, table filters, Recherche une ligne, upload document.html
+++ b/Selenium IDE tests/Open Autres Reporting. Verify page Table of own Autres Reporting , Top filters, table filters, Recherche une ligne, upload document.html
@@ -12,8 +12,18 @@
 <tr><td rowspan="1" colspan="3">Login-Logout-Login</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
