--- a/Selenium IDE tests/Open Depenses marketing. Verify page (Table of own Depenses (Répartir le montant), Top filters, table filters, Recherche une ligne, lignes.html
+++ b/Selenium IDE tests/Open Depenses marketing. Verify page (Table of own Depenses (Répartir le montant), Top filters, table filters, Recherche une ligne, lignes.html
@@ -12,8 +12,18 @@
 <tr><td rowspan="1" colspan="3">Open Depenses marketing. Verify page (Table of own Depenses (Répartir le montant), Top filters, table filters, Recherche une ligne, lignes</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
@@ -205,6 +215,21 @@
 	<td>clickAndWait</td>
 	<td>css=button.btn.btn-primary</td>
 	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td></td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Autres Evénement</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Campagne</td>
 </tr>
 <tr>
 	<td>assertText</td>
