--- a/Selenium IDE tests/Porsche Logo.html
+++ b/Selenium IDE tests/Porsche Logo.html
@@ -12,13 +12,13 @@
 <tr><td rowspan="1" colspan="3">Porsche Logo</td></tr>
 </thead><tbody>
 <tr>
-	<td>open</td>
-	<td>/login</td>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>id=username</td>
+	<td>open</td>
+	<td>/login</td>
 	<td></td>
 </tr>
 <tr>
