--- a/Selenium IDE tests/Depenses marketing.html
+++ b/Selenium IDE tests/Depenses marketing.html
@@ -52,11 +52,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>select</td>
-	<td>id=centre</td>
-	<td>label=Strasbourg</td>
-</tr>
-<tr>
 	<td>click</td>
 	<td>id=btn-add-spending</td>
 	<td></td>
@@ -64,7 +59,7 @@
 <tr>
 	<td>select</td>
 	<td>id=center_id</td>
-	<td>label=Strasbourg</td>
+	<td>label=Annecy</td>
 </tr>
 <tr>
 	<td>assertElementPresent</td>
@@ -74,7 +69,7 @@
 <tr>
 	<td>type</td>
 	<td>id=amount</td>
-	<td>5000</td>
+	<td>1000</td>
 </tr>
 <tr>
 	<td>clickAt</td>
@@ -92,44 +87,39 @@
 	<td>label=Commandes PROS</td>
 </tr>
 <tr>
-	<td>select</td>
-	<td>id=center_id</td>
-	<td>label=Toulon</td>
-</tr>
-<tr>
 	<td>clickAt</td>
 	<td>css=div.col-md-3 &gt; div.form-group &gt; div.input-group &gt; span.input-group-addon &gt; #btn_start</td>
 	<td></td>
 </tr>
 <tr>
 	<td>pause</td>
-	<td>5000</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
-	<td>select</td>
-	<td>css=div.col-md-3 &gt; div.form-group &gt; #type_spending_id</td>
-	<td>label=E-mailing</td>
+	<td>clickAt</td>
+	<td>link=6</td>
+	<td></td>
 </tr>
 <tr>
 	<td>pause</td>
-	<td>5000</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>id=operation_id</td>
-	<td>label=TOULO - AUTRE -INFORMATION P - 28/01/2018 - 2</td>
+	<td>label=ANNE - POF-M-MOTORSPORT-201 - 20/04/2018 - 1</td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>id=amounts_centers[0][center_id]</td>
-	<td>label=Toulon</td>
+	<td>label=Annecy</td>
 </tr>
 <tr>
-	<td>typeKeys</td>
+	<td>type</td>
 	<td>id=amounts_centers[0][amount]</td>
-	<td>2000</td>
+	<td>300</td>
 </tr>
 <tr>
 	<td>click</td>
@@ -139,26 +129,111 @@
 <tr>
 	<td>select</td>
 	<td>id=amounts_centers[1][center_id]</td>
-	<td>label=Fréjus</td>
+	<td>label=Grenoble</td>
 </tr>
 <tr>
-	<td>typeKeys</td>
+	<td>type</td>
 	<td>id=amounts_centers[1][amount]</td>
-	<td>3000</td>
-</tr>
-<tr>
-	<td>assertValue</td>
-	<td>id=amounts_centers[1][amount]</td>
-	<td>3000</td>
+	<td>700</td>
 </tr>
 <tr>
 	<td>click</td>
+	<td>id=state_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=state_0</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
 	<td>//button[@type='submit']</td>
 	<td></td>
 </tr>
 <tr>
+	<td>selectAndWait</td>
+	<td>id=centre</td>
+	<td>label=Annecy</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Autres</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Campagne</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>5000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>//table[@id='table-spendings']/tbody/tr/td[4]</td>
+	<td>ANNE - POF-M-MOTORSPORT-201 - 20/04/2018 - 1 - Partagée avec Annecy (300,00 €) , Grenoble (700,00 €)</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=centre</td>
+	<td>label=Annecy</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=i.fa.fa-trash</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=button.btn.btn-primary</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectAndWait</td>
+	<td>id=centre</td>
+	<td>label=Annecy</td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>css=td.dataTables_empty</td>
+	<td>Aucune donnée trouvée</td>
+</tr>
+<tr>
+	<td>assertText</td>
+	<td>id=table-spendings_info</td>
+	<td>Showing 0 to 0 of 0 entries</td>
+</tr>
+<tr>
 	<td>clickAt</td>
 	<td>link=Déconnexion</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 </tbody></table>
