--- a/Selenium IDE tests/Feedback.html
+++ b/Selenium IDE tests/Feedback.html
@@ -57,6 +57,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Autres Evénement essai</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Campagne</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>css=i.glyphicon.glyphicon-comment</td>
 	<td></td>
