--- a/Selenium IDE tests/Open Depenses details from Calendrier.html
+++ b/Selenium IDE tests/Open Depenses details from Calendrier.html
@@ -92,6 +92,16 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>css=button.close</td>
+	<td></td>
+</tr>
+<tr>
+	<td>selectAndWait</td>
+	<td>id=centre</td>
+	<td>label=Annecy</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>link=Déconnexion</td>
 	<td></td>
