Automation test updated 06/05/2018

--- a/Selenium IDE tests/Depenses marketing.html
+++ b/Selenium IDE tests/Depenses marketing.html
@@ -22,8 +22,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>id=username</td>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
@@ -143,11 +143,6 @@
 </tr>
 <tr>
 	<td>typeKeys</td>
-	<td>id=amounts_centers[1][amount]</td>
-	<td>3000</td>
-</tr>
-<tr>
-	<td>assertValue</td>
 	<td>id=amounts_centers[1][amount]</td>
 	<td>3000</td>
 </tr>
