--- a/Selenium IDE tests/Logout.html
+++ b/Selenium IDE tests/Logout.html
@@ -12,8 +12,28 @@
 <tr><td rowspan="1" colspan="3">Logout</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=username</td>
+	<td>admin</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=btn_login</td>
 	<td></td>
 </tr>
 <tr>
