--- a/Selenium IDE tests/Feedback.html
+++ b/Selenium IDE tests/Feedback.html
@@ -57,6 +57,31 @@
 	<td></td>
 </tr>
 <tr>
+	<td>selectAndWait</td>
+	<td>id=centre</td>
+	<td>label=Annecy</td>
+</tr>
+<tr>
+	<td>selectAndWait</td>
+	<td>id=centre</td>
+	<td>label=Strasbourg</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//li[4]/a/span</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Autres</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=campaign_id</td>
+	<td>label=Campagne</td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>css=i.glyphicon.glyphicon-comment</td>
 	<td></td>
