--- a/Selenium IDE tests/Open Mes activities marketing. Add feedback.html
+++ b/Selenium IDE tests/Open Mes activities marketing. Add feedback.html
@@ -22,6 +22,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertText</td>
 	<td>id=username</td>
 	<td></td>
@@ -224,6 +229,11 @@
 <tr>
 	<td>clickAt</td>
 	<td>link=Déconnexion</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 </tbody></table>
