--- a/Selenium IDE tests/Porsche Logo.html
+++ b/Selenium IDE tests/Porsche Logo.html
@@ -12,8 +12,18 @@
 <tr><td rowspan="1" colspan="3">Porsche Logo</td></tr>
 </thead><tbody>
 <tr>
+	<td>pause</td>
+	<td>3000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>open</td>
 	<td>/login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>3000</td>
 	<td></td>
 </tr>
 <tr>
